# object_pose_markerarray

./: CMakeLists.txt  README.md  catkin.cmake  manifest.xml  package.xml
config/: bowl.config.json  fuze_bottle.config.json  glass.config.json  object_tags.yaml  plate.config.json  tag_poses.yaml
src/: object_poses.py  tag_object_transforms.py
